<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/filmAppBackground">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.app.myview.popularmovies.FilmDetailActivity"
    android:background="@color/filmAppBackground">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_film_detail_poster"
            android:contentDescription="@string/iv_recycler_view_content_description"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tabBackground"
            android:layout_toRightOf="@+id/iv_film_detail_poster"
            android:id="@+id/tv_title_tab"
            android:text="@string/details_title"
            android:textSize="@dimen/tab_text_sixe"
            android:textColor="@color/filmText"
            android:textAlignment="center"
            android:paddingBottom="@dimen/detail_padding_bottom"
            />
        <!--TODO-2.1 REQUIREMENT Internationalization replace android:layout_toRightOf with android:layout_toEndOf etc. -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/filmText"
            android:textSize="@dimen/detail_text_size"
            android:textAlignment="center"
            android:id="@+id/tv_film_detail_title"
            android:layout_toRightOf="@+id/iv_film_detail_poster"
            android:layout_below="@+id/tv_title_tab"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/release_date_tab"
            android:textSize="@dimen/tab_text_sixe"
            android:textColor="@color/filmText"
            android:textAlignment="center"
            android:paddingBottom="@dimen/detail_padding_bottom"
            android:layout_toRightOf="@id/iv_film_detail_poster"
            android:layout_below="@id/tv_film_detail_title"
            android:background="@color/tabBackground"
            android:text="@string/details_releasedate"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_film_detail_release_date"
            android:layout_toRightOf="@id/iv_film_detail_poster"
            android:layout_below="@id/release_date_tab"
            android:textSize="@dimen/detail_text_size"
            android:textColor="@color/filmText"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ratings_tab"
            android:textSize="@dimen/tab_text_sixe"
            android:textColor="@color/filmText"
            android:textAlignment="center"
            android:paddingBottom="@dimen/detail_padding_bottom"
            android:layout_toRightOf="@id/iv_film_detail_poster"
            android:layout_below="@id/tv_film_detail_release_date"
            android:background="@color/tabBackground"
            android:text="@string/details_rating"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_film_detail_rating"
            android:textSize="@dimen/detail_text_size"
            android:layout_toRightOf="@id/iv_film_detail_poster"
            android:layout_below="@id/ratings_tab"
            android:textColor="@color/filmText"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/summary_tab"
            android:textSize="@dimen/tab_text_sixe"
            android:textColor="@color/filmText"
            android:textAlignment="center"
            android:paddingBottom="@dimen/detail_padding_bottom"
            android:layout_below="@id/iv_film_detail_poster"
            android:background="@color/tabBackground"
            android:text="@string/details_overview"
            />
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_tab"
            android:id="@+id/sv_overview">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_film_detail_overview"
                android:textSize="@dimen/detail_overview_text_size"
                android:paddingStart="@dimen/detail_overview_padding"
                android:paddingEnd="@dimen/detail_overview_padding"
                android:textColor="@color/filmText"
                />
        </ScrollView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trailer_tab"
            android:textSize="@dimen/detail_text_size"
            android:textColor="@color/filmText"
            android:textAlignment="center"
            android:paddingBottom="@dimen/detail_padding_bottom"
            android:layout_below="@id/sv_overview"
            android:background="@color/tabBackground"
            android:text="@string/film_detail_trailer_tab"
            />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailer_tab"
            android:id="@+id/rv_trailers" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/review_tab"
            android:textSize="@dimen/detail_text_size"
            android:textColor="@color/filmText"
            android:textAlignment="center"
            android:paddingBottom="@dimen/detail_padding_bottom"
            android:layout_below="@id/rv_trailers"
            android:background="@color/tabBackground"
            android:text="@string/film_detail_review_tab"
            />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/review_tab"
            android:id="@+id/rv_reviews" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_detail_network_error"
            android:layout_below="@id/rv_reviews"
            android:text="@string/film_json_not_found"
            android:textAlignment="center"
            android:textSize="@dimen/tab_text_sixe"
            android:textColor="@color/filmText"/>
    </RelativeLayout>
</ScrollView>
